--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_storage: ^11.2.3
   flutter:
     sdk: flutter
+  http: ^1.1.0
   intl: ^0.18.1
   path_provider: ^2.0.15
   pdf: ^3.10.4
@@ -60,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/rr_domo_logo.png
+    - assets/database/inventory_items.json
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
